fix menu z-index (#1215)

--- a/src/menu/_menu.scss
+++ b/src/menu/_menu.scss
@@ -87,6 +87,9 @@ menu {
                     }
                 }
             }
+            .dropdown-menu {
+                z-index: 1001;
+            }
         }
     }
     > div.menu {
